crates/wac-parser/tests/resolution/fail/import-invalid-name.wac
import x with "NOT-VALID-NAME!": func();
